--- a/style.css
+++ b/style.css
@@ -105,6 +105,12 @@ footer {
     background-color: #DAA520;
 }
 
+#confirmationMessage {
+    display: none;
+    color: green;
+    margin-top: 10px;
+}
+
 @media (min-width: 768px) {
     .contact-form {
         display: flex;
