--- a/style.css
+++ b/style.css
@@ -12,6 +12,14 @@ header {
     padding: 20px;
     text-align: center;
     border-bottom: 5px solid #DAA520; /* Or */
+    position: relative;
+}
+
+header img.logo {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    height: 50px;
 }
 
 header h1 {
@@ -53,40 +61,6 @@ nav ul li a {
 nav ul li a:hover {
     color: #fff;
     background-color: #DAA520; /* Or */
-}
-
-/* Menu déroulant */
-nav ul li ul {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: #fff;
-    padding: 0;
-    list-style: none;
-    border-radius: 5px;
-    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
-}
-
-nav ul li:hover ul {
-    display: block;
-}
-
-nav ul li ul li {
-    width: 200px;
-    margin: 0;
-}
-
-nav ul li ul li a {
-    padding: 10px;
-    border-radius: 0;
-    background-color: #8B0000;
-    color: #fff;
-}
-
-nav ul li ul li a:hover {
-    background-color: #DAA520; /* Or */
-    color: #fff;
 }
 
 main {
@@ -148,7 +122,7 @@ footer {
     transition: background-color 0.3s;
 }
 
-.contact-form button:hover {
+contact-form button:hover {
     background-color: #DAA520;
 }
 
