--- a/style.css
+++ b/style.css
@@ -13,13 +13,14 @@ header {
     text-align: center;
     border-bottom: 5px solid #DAA520; /* Or */
     position: relative;
+    height: 80px; /* Ajustement de la hauteur du header */
 }
 
 header img.logo {
     position: absolute;
-    top: 10px;
+    top: 10%;
     left: 10px;
-    height: 50px;
+    height: 80%; /* 80% de la hauteur du header */
 }
 
 header h1 {
@@ -122,7 +123,7 @@ footer {
     transition: background-color 0.3s;
 }
 
-contact-form button:hover {
+.contact-form button:hover {
     background-color: #DAA520;
 }
 
